--- a/org.openwms/trunk/source/org.openwms.tms.service.spring/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.tms.service.spring/pom.xml
@@ -71,6 +71,10 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.tms.util</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.tms.domain</artifactId>
         </dependency>
         <dependency>
