--- a/org.openwms/trunk/source/org.openwms.tms.domain/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.tms.domain/pom.xml
@@ -97,7 +97,10 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.common.util</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
