--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
@@ -1,26 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-/*
- * openwms.org, the Open Warehouse Management System.
- *
- * This file is part of openwms.org.
- *
- * openwms.org is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as 
- * published by the Free Software Foundation, either version 3 of the
- * License, or (at your option) any later version.
- *
- * openwms.org is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this software. If not, write to the Free
- * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
- */  
--->
+    <!--
+        /* * openwms.org, the Open Warehouse Management System. * * This file is part of openwms.org. * * openwms.org is
+        free software: you can redistribute it and/or modify * it under the terms of the GNU Lesser General Public
+        License as * published by the Free Software Foundation, either version 3 of the * License, or (at your option)
+        any later version. * * openwms.org is distributed in the hope that it will be useful, * but WITHOUT ANY
+        WARRANTY; without even the implied warranty of * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the *
+        GNU Lesser General Public License for more details. * * You should have received a copy of the GNU Lesser
+        General Public * License along with this software. If not, write to the Free * Software Foundation, Inc., 51
+        Franklin St, Fifth Floor, Boston, MA * 02110-1301 USA, or see the FSF site: http://www.fsf.org. */
+    -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -80,24 +68,29 @@
                             <goal>wrapper</goal>
                             <goal>copy-flex-resources</goal>
                         </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
+                            <templateOutputDirectory>${project.build.directory}/templates</templateOutputDirectory>
+                            <parameters>
+                                <swf>${packed.app}</swf>
+                                <title>openwms.org</title>
+                                <width>100%</width>
+                                <height>100%</height>
+                            </parameters>
+                            <htmlName>index</htmlName>
+                            <templateInclusions>
+                                <String>**/*.jsp</String>
+                                <String>WEB-INF/**/*</String>
+                            </templateInclusions>
+                            <stripVersion>true</stripVersion>
+                            <wrapperArtifact>
+                                <groupId>org.openwms</groupId>
+                                <artifactId>org.openwms.client.flex.app</artifactId>
+                                <version>${project.version}</version>
+                            </wrapperArtifact>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
-                    <templateOutputDirectory>${project.build.directory}/templates</templateOutputDirectory>
-                    <parameters>
-                        <swf>${packed.app}</swf>
-                        <title>openwms.org</title>
-                        <width>100%</width>
-                        <height>100%</height>
-                    </parameters>
-                    <htmlName>index</htmlName>
-                    <templateInclusions>
-                        <String>**/*.jsp</String>
-                        <String>WEB-INF/**/*</String>
-                    </templateInclusions>
-                    <stripVersion>true</stripVersion>
-                </configuration>
             </plugin>
         </plugins>
     </build>
