--- a/org.openwms/trunk/source/org.openwms.app.plan/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.app.plan/pom.xml
@@ -55,6 +55,7 @@
                             <goal>copy-resources</goal>
                         </goals>
                         <configuration>
+                            <stripVersion>true</stripVersion>
                             <outputDirectory>${basedir}/target</outputDirectory>
                             <resources>
                                 <resource>
@@ -78,6 +79,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
+                            <stripVersion>true</stripVersion>
                             <outputDirectory>${project.build.directory}/usr</outputDirectory>
                             <overWriteIfNewer>true</overWriteIfNewer>
                             <includeGroupIds></includeGroupIds>
