--- a/org.openwms/trunk/source/org.openwms.app.plan/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.app.plan/pom.xml
@@ -79,7 +79,7 @@
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
-                            <stripVersion>true</stripVersion>
+                            <stripVersion>false</stripVersion>
                             <outputDirectory>${project.build.directory}/usr</outputDirectory>
                             <overWriteIfNewer>true</overWriteIfNewer>
                             <includeGroupIds></includeGroupIds>
