--- a/org.openwms/trunk/source/org.openwms.client.flex.app/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/pom.xml
@@ -34,7 +34,6 @@
 	<name>${project.artifactId}</name>
 	<properties>
 		<moduleDir>..</moduleDir>
-		<flex.version>3.2.0.3958</flex.version>
 	</properties>
 	<build>
 		<finalName>${project.artifactId}-${project.version}</finalName>
@@ -44,7 +43,6 @@
 			<plugin>
 				<groupId>org.sonatype.flexmojos</groupId>
 				<artifactId>flexmojos-maven-plugin</artifactId>
-				<version>3.3.0</version>
 				<extensions>true</extensions>
 				<configuration>
 					<generatorToUse>graniteds2</generatorToUse>
@@ -86,18 +84,18 @@
 						<groupId>com.adobe.flex</groupId>
 						<artifactId>compiler</artifactId>
 						<version>${flex.version}</version>
-						<type>pom</type>
+                        <type>pom</type>
 					</dependency>
 					<dependency>
 						<groupId>org.graniteds</groupId>
 						<artifactId>granite-essentials-swc</artifactId>
-						<version>${granite.version}</version>
+                        <version>${granite.version}</version>
 						<type>swc</type>
 					</dependency>
 					<dependency>
 						<groupId>org.graniteds</groupId>
 						<artifactId>granite-swc</artifactId>
-						<version>${granite.version}</version>
+                        <version>${granite.version}</version>
 						<type>swc</type>
 					</dependency>
                     <dependency>
@@ -120,6 +118,19 @@
                     </dependency>
 				</dependencies>
 			</plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${basedir}/libs</directory>
+                            <includes>
+                                <include>**</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -133,7 +144,6 @@
 						<configuration>
 							<outputDirectory>libs</outputDirectory>
 							<overWriteIfNewer>true</overWriteIfNewer>
-							<includeGroupIds></includeGroupIds>
 							<excludeGroupIds>com.adobe.flex.framework</excludeGroupIds>
 						</configuration>
 					</execution>
@@ -178,62 +188,50 @@
 	</pluginRepositories>
 
 	<dependencies>
-	   <!-- Project dependencies -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>org.springframework.spring-library</artifactId>
+            <type>libd</type>
+        </dependency>
+        
+        <!-- Project dependencies -->
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>org.openwms.common.domain.as</artifactId>
-			<version>${project.version}</version>
 			<type>swc</type>
 		</dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.tms.domain.as</artifactId>
-            <version>${project.version}</version>
             <type>swc</type>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.client.flex.lib</artifactId>
-            <version>${project.version}</version>
             <type>swc</type>
         </dependency>
 		
+        <!-- Adobe Flex Framework -->
 		<dependency>
 			<groupId>com.adobe.flex.framework</groupId>
 			<artifactId>flex-framework</artifactId>
-			<version>${flex.version}</version>
 			<type>pom</type>
-		</dependency>
-
-		<dependency>
-			<groupId>org.graniteds</groupId>
-			<artifactId>granite-core-swc</artifactId>
-			<version>1.2.0_SP1</version>
-			<type>swc</type>
 		</dependency>
 		<dependency>
 			<groupId>org.graniteds</groupId>
 			<artifactId>granite-essentials-swc</artifactId>
-			<version>${granite.version}</version>
 			<type>swc</type>
 			<scope>internal</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.graniteds</groupId>
 			<artifactId>granite-swc</artifactId>
-			<version>${granite.version}</version>
 			<type>swc</type>
 			<scope>internal</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.spring-library</artifactId>
-			<type>libd</type>
-		</dependency>
-		<dependency>
 			<groupId>com.asunit</groupId>
 			<artifactId>asunit</artifactId>
-			<version>20071011</version>
 			<type>swc</type>
 			<scope>test</scope>
 		</dependency>
