--- a/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.wrapper/pom.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-    <!--
-        /* * openwms.org, the Open Warehouse Management System. * * This file is part of openwms.org. * * openwms.org is
-        free software: you can redistribute it and/or modify * it under the terms of the GNU Lesser General Public
-        License as * published by the Free Software Foundation, either version 3 of the * License, or (at your option)
-        any later version. * * openwms.org is distributed in the hope that it will be useful, * but WITHOUT ANY
-        WARRANTY; without even the implied warranty of * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the *
-        GNU Lesser General Public License for more details. * * You should have received a copy of the GNU Lesser
-        General Public * License along with this software. If not, write to the Free * Software Foundation, Inc., 51
-        Franklin St, Fifth Floor, Boston, MA * 02110-1301 USA, or see the FSF site: http://www.fsf.org. */
-    -->
+<!--
+/*
+ * openwms.org, the Open Warehouse Management System.
+ *
+ * This file is part of openwms.org.
+ *
+ * openwms.org is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as 
+ * published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
+ *
+ * openwms.org is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with this software. If not, write to the Free
+ * Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
+ * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
+ */  
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -25,9 +37,15 @@
         <packed.app>${project.groupId}.client.flex.app</packed.app>
     </properties>
     <scm>
-        <connection>scm:svn:https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper</connection>
-        <developerConnection>scm:svn:https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper</developerConnection>
-        <url>https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper</url>
+        <connection>
+            scm:svn:https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper
+        </connection>
+        <developerConnection>
+            scm:svn:https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper
+        </developerConnection>
+        <url>
+            https://openwms2005.svn.sourceforge.net/svnroot/openwms2005/org.openwms/trunk/source/org.openwms.client.flex.wrapper
+        </url>
     </scm>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
@@ -157,51 +175,43 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.client.flex.app</artifactId>
-            <version>${project.version}</version>
             <type>swf</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.flex.module</artifactId>
-            <version>${project.version}</version>
             <type>swf</type>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.tms.flex.module</artifactId>
-            <version>${project.version}</version>
             <type>swf</type>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.framework.test</artifactId>
-            <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.domain</artifactId>
-            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.tms.domain</artifactId>
-            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.common.service.api</artifactId>
-            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.tms.service.api</artifactId>
-            <version>${project.version}</version>
             <scope>provided</scope>
         </dependency>
 
@@ -209,27 +219,22 @@
         <dependency>
             <groupId>org.graniteds</groupId>
             <artifactId>granite-core</artifactId>
-            <version>${granite.version}</version>
         </dependency>
         <dependency>
             <groupId>org.graniteds</groupId>
             <artifactId>granite-spring</artifactId>
-            <version>${granite.version}</version>
         </dependency>
         <dependency>
             <groupId>org.graniteds</groupId>
             <artifactId>granite-eclipselink</artifactId>
-            <version>${granite.version}</version>
         </dependency>
         <dependency>
             <groupId>org.graniteds</groupId>
             <artifactId>granite-toplink</artifactId>
-            <version>${granite.version}</version>
         </dependency>
         <dependency>
             <groupId>org.graniteds</groupId>
             <artifactId>granite-hibernate</artifactId>
-            <version>${granite.version}</version>
         </dependency>
 
         <!-- Other libraries -->
