Fixed generation of AS inner classes, fixed ChangePasswordDialog
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@970 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
@@ -110,7 +110,7 @@
 						<class>org.openwms.common.domain.*</class>
 					</includeJavaClasses>
                     <excludeJavaClasses>
-                        <class>org.openwms.common.domain.system.usermanagement.package-info</class>
+                        <class>org.openwms.common.domain.system.usermanagement.User$1</class>
                     </excludeJavaClasses>
 					<sourcePaths>
 						<sourcePath>${project.basedir}/src/main/flex/</sourcePath>
