--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/pom.xml
@@ -101,6 +101,19 @@
 				</dependencies>
 			</plugin>
             <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${basedir}/libs</directory>
+                            <includes>
+                                <include>**</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
