--- a/org.openwms/trunk/source/org.openwms.common.flex.module/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/pom.xml
@@ -100,6 +100,19 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${basedir}/libs</directory>
+                            <includes>
+                                <include>**</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
