--- a/org.openwms/trunk/source/org.openwms.client.flex.app/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/pom.xml
@@ -116,6 +116,45 @@
                         <version>${project.version}</version>
                         <type>swc</type>
                     </dependency>
+                    <dependency>
+                        <groupId>org.as3commons</groupId>
+                        <artifactId>as3commons-lang</artifactId>
+                        <version>0.2.1</version>
+                        <type>swc</type>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>com.adobe.flex.framework</groupId>
+                                <artifactId>flex-framework</artifactId>
+                            </exclusion>
+                        </exclusions>
+                        <scope>compile</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.as3commons</groupId>
+                        <artifactId>as3commons-reflect</artifactId>
+                        <version>1.3</version>
+                        <type>swc</type>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>org.as3commons</groupId>
+                                <artifactId>as3commons-logging</artifactId>
+                            </exclusion>
+                        </exclusions>
+                        <scope>compile</scope>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.as3commons</groupId>
+                        <artifactId>as3commons-logging</artifactId>
+                        <version>1.1.1</version>
+                        <type>swc</type>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>com.adobe.flex.framework</groupId>
+                                <artifactId>flex-framework</artifactId>
+                            </exclusion>
+                        </exclusions>
+                        <scope>compile</scope>
+                    </dependency>
 				</dependencies>
 			</plugin>
             <plugin>
@@ -172,6 +211,20 @@
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
+		</repository>
+		<repository>
+		    <id>yoolab.org-releases</id>
+		    <url>http://projects.yoolab.org/maven/content/repositories/releases</url>
+		    <releases>
+		        <enabled>true</enabled>
+		    </releases>
+		</repository>
+		<repository>
+		    <id>yoolab.org-snapshots</id>
+		    <url>http://projects.yoolab.org/maven/content/repositories/snapshots</url>
+		    <snapshots>
+		        <enabled>true</enabled>
+		    </snapshots>
 		</repository>
 	</repositories>
 	<pluginRepositories>
@@ -235,5 +288,48 @@
 			<type>swc</type>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.as3commons</groupId>
+            <artifactId>as3commons-lang</artifactId>
+            <version>0.2.1</version>
+            <type>swc</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.adobe.flex.framework</groupId>
+                    <artifactId>flex-framework</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.as3commons</groupId>
+            <artifactId>as3commons-reflect</artifactId>
+            <version>1.3</version>
+            <type>swc</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.adobe.flex.framework</groupId>
+                    <artifactId>flex-framework</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.as3commons</groupId>
+                    <artifactId>as3commons-logging</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.as3commons</groupId>
+            <artifactId>as3commons-logging</artifactId>
+            <version>1.1.1</version>
+            <type>swc</type>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.adobe.flex.framework</groupId>
+                    <artifactId>flex-framework</artifactId>
+                </exclusion>
+            </exclusions>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 </project>
