--- a/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.domain.as/pom.xml
@@ -157,16 +157,6 @@
 	<reporting>
 		<plugins>
 			<plugin>
-				<!-- We want to have everything compiled for Java 6 -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<!--  -->
-			<plugin>
 				<groupId>org.sonatype.flexmojos</groupId>
 				<artifactId>flexmojos-maven-plugin</artifactId>
 				<version>3.3.0</version>
@@ -179,8 +169,9 @@
 						<configuration>
 							<footer>www.openwms.org</footer>
 							<sourcePaths>
-								<sourcePath>${project.basedir}/src/main/flex/</sourcePath>
-								<sourcePath>${project.build.directory}/generated-sources/flexmojos/</sourcePath>
+                                <path>${basedir}/src/main/resources</path>
+                                <path>${basedir}/src/main/flex</path>
+                                <path>${basedir}/target/generated-sources/flexmojos/</path>
 							</sourcePaths>
 						</configuration>
 					</reportSet>
