--- a/org.openwms/trunk/source/org.openwms.common.infrastructure.hsql/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.common.infrastructure.hsql/pom.xml
@@ -34,8 +34,15 @@
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>..</moduleDir>
+        <openwms.configuration.version>0.0.1-SNAPSHOT</openwms.configuration.version>
     </properties>
     <build>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <filtering>true</filtering>
+          </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>com.springsource.bundlor</groupId>
@@ -58,6 +65,11 @@
             <type>libd</type>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.osgi</groupId>
+            <artifactId>spring-osgi-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- JEE API -->
         <dependency>
@@ -78,6 +90,15 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>com.springsource.org.hsqldb</artifactId>
             <scope>provided</scope>
+        </dependency>
+
+        <!-- Project dependencies -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.common.infrastructure.configuration</artifactId>
+            <version>${openwms.configuration.version}</version>
+            <type>properties</type>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 </project>
