--- a/org.openwms/trunk/source/org.openwms.tms.integration.jpa/pom.xml
+++ b/org.openwms/trunk/source/org.openwms.tms.integration.jpa/pom.xml
@@ -63,11 +63,18 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>org.springframework.spring-library</artifactId>
 			<type>libd</type>
+            <scope>provided</scope>
 		</dependency>
         <dependency>
             <groupId>org.springframework.osgi</groupId>
             <artifactId>org.springframework.osgi-library</artifactId>
             <type>libd</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.osgi</groupId>
+            <artifactId>spring-osgi-core</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -83,10 +90,12 @@
 		<dependency>
 			<groupId>javax.persistence</groupId>
 			<artifactId>com.springsource.javax.persistence</artifactId>
+            <scope>provided</scope>
 		</dependency>
         <dependency>
             <groupId>javax.transaction</groupId>
             <artifactId>com.springsource.javax.transaction</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Test database driver -->
@@ -109,7 +118,6 @@
             <groupId>org.aspectj</groupId>
             <artifactId>org.aspectj-library</artifactId>
             <type>libd</type>
-            <scope>test</scope>
         </dependency>
 
         <!-- Project dependencies -->
