--- a/org.openwms/trunk/common/org.openwms.common.integration/pom.xml
+++ b/org.openwms/trunk/common/org.openwms.common.integration/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openwms</groupId>
-        <artifactId>org.openwms</artifactId>
+        <artifactId>org.openwms.common</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.common.integration</artifactId>
