--- a/org.openwms/trunk/core/org.openwms.app.plan/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.app.plan/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openwms</groupId>
-        <artifactId>org.openwms</artifactId>
+        <artifactId>org.openwms.core</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.app.plan</artifactId>
@@ -178,43 +178,43 @@
         <!-- Project Core dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.util</artifactId>
+            <artifactId>org.openwms.core.util</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.domain</artifactId>
+            <artifactId>org.openwms.core.domain</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.infrastructure.configuration</artifactId>
+            <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
             <version>${openwms.configuration.version}</version>
             <type>properties</type>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.infrastructure.postgres</artifactId>
+            <artifactId>org.openwms.core.infrastructure.postgres</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.integration</artifactId>
+            <artifactId>org.openwms.core.integration</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.integration.hibernate</artifactId>
+            <artifactId>org.openwms.core.integration.hibernate</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.integration.jpa</artifactId>
+            <artifactId>org.openwms.core.integration.jpa</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.service.api</artifactId>
+            <artifactId>org.openwms.core.service.api</artifactId>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.service.spring</artifactId>
+            <artifactId>org.openwms.core.service.spring</artifactId>
         </dependency>
         <!-- Project TMS dependencies -->
         <dependency>
