--- a/org.openwms/trunk/core/org.openwms.core.domain/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.domain/pom.xml
@@ -26,11 +26,10 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openwms</groupId>
-        <artifactId>org.openwms</artifactId>
+        <artifactId>org.openwms.core</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>org.openwms.common.domain</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>org.openwms.core.domain</artifactId>
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>..</moduleDir>
@@ -65,7 +64,7 @@
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.framework.test</artifactId>
+            <artifactId>org.openwms.core.framework.test</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
