--- a/org.openwms/trunk/core/org.openwms.core.framework.test/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.framework.test/pom.xml
@@ -26,10 +26,10 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openwms</groupId>
-        <artifactId>org.openwms</artifactId>
+        <artifactId>org.openwms.core</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>org.openwms.common.framework.test</artifactId>
+    <artifactId>org.openwms.core.framework.test</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
