--- a/org.openwms/trunk/core/org.openwms.core.integration.hibernate/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.integration.hibernate/pom.xml
@@ -26,10 +26,10 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.openwms</groupId>
-        <artifactId>org.openwms</artifactId>
+        <artifactId>org.openwms.core</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>org.openwms.common.integration.hibernate</artifactId>
+    <artifactId>org.openwms.core.integration.hibernate</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
@@ -113,22 +113,22 @@
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.infrastructure.postgres</artifactId>
+            <artifactId>org.openwms.core.infrastructure.postgres</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.integration</artifactId>
+            <artifactId>org.openwms.core.integration</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.domain</artifactId>
+            <artifactId>org.openwms.core.domain</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.infrastructure.configuration</artifactId>
+            <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
             <version>${openwms.configuration.version}</version>
             <type>properties</type>
             <scope>runtime</scope>
